Move some details down to highlight most important stuff

--- a/man/rmd/linear-reg-glmnet.Rmd
+++ b/man/rmd/linear-reg-glmnet.Rmd
@@ -34,18 +34,6 @@ param$item
 For `penalty`, the amount of regularization includes both the L1 penalty (i.e., lasso) and the L2 penalty (i.e., ridge or weight decay). `glmnet()` does not regularize the intercept parameter.
 
 When mixture = 1, it is a pure lasso model while mixture = 0 indicates that ridge regression is being used. 
-
-For _pure ridge regression models_, it is advisable to pass `lambda.min.ratio = 0` as an engine argument so that the correct parameter estimates are obtained (see [issue #431](https://github.com/tidymodels/parsnip/issues/431)).
-
-For `glmnet` models, the full regularization path is always fit regardless of the
-value given to `penalty`. Also, there is the option to pass  multiple values (or
-no values) to the `penalty` argument. When using the  `predict()` method in these
-cases, the return value depends on  the value of `penalty`. When using
-`predict()`, only a single  value of the penalty can be used. When predicting on
-multiple  penalties, the `multi_predict()` function can be used. It  returns a
-tibble with a list column called `.pred` that contains  a tibble with all of the
-penalty results.
-
 ## Translation from parsnip to the original package
 
 ```{r glmnet-csl}
@@ -57,13 +45,21 @@ linear_reg(penalty = double(1), mixture = double(1)) %>%
 
 ## Preprocessing requirements
 
-Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data (if required).
+Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data when required.
 
 Also, predictors should have the same scale. One way to achieve this is to center and scale each so that each predictors have mean zero and a variance of one.
 
 ## Other details
 
-The model can accept case weights. 
+For _pure ridge regression models_, we advise passing `lambda.min.ratio = 0` as an engine argument so the correct parameter estimates are obtained (see [issue #431](https://github.com/tidymodels/parsnip/issues/431)).
+
+For `glmnet` models, the full regularization path is always fit regardless of the
+value given to `penalty`. Also, there is the option to pass  multiple values (or
+no values) to the `penalty` argument. When using the  `predict()` method in these
+cases, the return value depends on  the value of `penalty`. When using
+`predict()`, only a single  value of the penalty can be used. When predicting on
+multiple  penalties, use the `multi_predict()` function. It returns a tibble 
+with a list column called `.pred` containing a tibble of all the penalty results.
 
 ## References
 
