--- a/man/rmd/linear-reg-spark.Rmd
+++ b/man/rmd/linear-reg-spark.Rmd
@@ -33,7 +33,7 @@ param$item
 
 For `penalty`, the amount of regularization includes both the L1 penalty (i.e., lasso) and the L2 penalty (i.e., ridge or weight decay). 
 
-When mixture = 1, it is a pure lasso model while mixture = 0 indicates that ridge regression is being used.
+A value of `mixture = 1` corresponds to a pure lasso model, while `mixture = 0` indicates ridge regression.
 
 ## Translation from parsnip to the original package
 
@@ -46,7 +46,7 @@ linear_reg(penalty = double(1), mixture = double(1)) %>%
 
 ## Preprocessing requirements
 
-Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data (if required).
+Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicator variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data if required.
 
 Also, predictors should have the same scale. One way to achieve this is to center and scale each so that each predictors have mean zero and a variance of one.
 
