--- a/man/rmd/linear-reg-stan.Rmd
+++ b/man/rmd/linear-reg-stan.Rmd
@@ -30,7 +30,7 @@ linear_reg() %>%
 
 ## Preprocessing requirements
 
-The only preprocessing required for this model is that factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data (if required).
+The only preprocessing required for this model is that factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicator variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data if required.
 
 ## Other details
 
