--- a/man/rmd/glmnet-details.Rmd
+++ b/man/rmd/glmnet-details.Rmd
@@ -7,7 +7,7 @@ First, `glmnet` fits two types of penalties: the lasso (or L1) penalty and the r
 
 When `glmnet` fits the model, the intercept coefficient is not penalized. 
 
-When the `glmnet` model is trained, it estimates a continuum of possible penalty values. This gives a _coefficient path_ for each data set and a given value of `alpha`. The user doesn't need to declare the exact value of the penalty that should be used until sample prediction (i.e., it is not needed when the model is trained). If you specify a single value of `lamda` when calling `glmnet()`, the estimated coefficient path only has that value. 
+When the `glmnet` model is trained, it estimates a continuum of possible penalty values. This gives a _coefficient path_ for each data set and a given value of `alpha`. The user doesn't need to declare the exact value of the penalty that should be used until sample prediction (i.e., it is not needed when the model is trained). If you specify a single value of `lamda` when calling [glmnet::glmnet()], the estimated coefficient path only has that value. 
 
 # Using glmnet with parsnip
 
@@ -79,7 +79,7 @@ multi_predict(glmnet_fit, head(Chicago), penalty = c(0, 0.1)) %>%
   unnest(cols = c(.pred))
 ```
 
-You can modify the penalties contained in the path by using the `glmnet()` arguments `nlambda` and `lambda.min.ratio`. The latter is discussed more below. These arguments would be passed when `set_engine()` is called. 
+You can modify the penalties contained in the path by using the [glmnet::glmnet()] arguments `nlambda` and `lambda.min.ratio`. The latter is discussed more below. These arguments would be passed when `set_engine()` is called. 
 
 Note that the value supplied by the user in the model specification (`penalty = 0.1)` may not be on the coefficient path. In that case, `glmnet` interpolates coefficients values between the two values on the path that bracket the value. Use the `tidy()` method in the `parsnip` package to get those values: 
 
@@ -97,7 +97,7 @@ broom:::tidy.glmnet(glmnet_fit$fit)
 
 One oddity is related to models with `alpha = 0` (i.e., a pure L2 penalty). As shown in issue [#431](https://github.com/tidymodels/parsnip/issues/431), the parameter values obtained may not be close to the true values when the other arguments contain their default values. 
 
-However, we have noticed that using the argument value `lambda.min.ratio = 0` in these fits might help achieve the correct results. However, consult the `glmnet()` function documentation to read about the potential effects of using this value. 
+However, we have noticed that using the argument value `lambda.min.ratio = 0` in these fits might help achieve the correct results. However, consult the [glmnet::glmnet()] function documentation to read about the potential effects of using this value. 
 
 Here's an example of how the coefficient path is changed by this option: 
 
