--- a/man/rmd/linear_reg_stan.Rmd
+++ b/man/rmd/linear_reg_stan.Rmd
@@ -34,13 +34,7 @@ The only preprocessing required for this model is that factor/categorical predic
 
 ## Other details
 
-The model can accept case weights. 
-
-For prediction, the `stan` engine can compute posterior  intervals analogous to
-confidence and prediction intervals. In  these instances, the units are the
-original outcome and when  `std_error = TRUE`, the standard deviation of the
-posterior  distribution (or posterior predictive distribution as  appropriate) is
-returned.
+For prediction, the `stan` engine can compute posterior  intervals analogous to confidence and prediction intervals. In  these instances, the units are the original outcome and when  `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
 
 ## References
 
