--- a/man/rmd/boost_tree_xgboost.Rmd
+++ b/man/rmd/boost_tree_xgboost.Rmd
@@ -7,8 +7,8 @@
 
 ```{r xgboost-param-info, echo = FALSE}
 defaults <- 
-  tibble::tibble(parsnip = c("tree_depth", "trees", "learn_rate", "mtry", "min_n", "loss_reduction", "sample_size"),
-                 default = c("6L", "15L", "0.3", "see below", "1L", "0.0", "1.0"))
+  tibble::tibble(parsnip = c("tree_depth", "trees", "learn_rate", "mtry", "min_n", "loss_reduction", "sample_size", "stop_iter"),
+                 default = c("6L", "15L", "0.3", "see below", "1L", "0.0", "1.0", "Inf"))
 
 # For this model, this is the same for all modes
 param <-
@@ -16,7 +16,6 @@ param <-
   set_engine("xgboost") %>% 
   set_mode("regression") %>% 
   tunable() %>% 
-  dplyr::filter(name != "stop_iter") %>% 
   dplyr::select(-source, -component, -component_id, parsnip = name) %>% 
   dplyr::mutate(
     dials = purrr::map(call_info, get_dials),
@@ -82,7 +81,7 @@ By default, the model is trained without parallel processing. This can be change
 
 ### Early stopping
 
-The `stop_iter()`  argument allows the model to prematurely stop training if the objective function does not improve. 
+The `stop_iter()`  argument allows the model to prematurely stop training if the objective function does not improve within `early_stop` iterations. 
 
 The best way to use this feature is in conjunction with an _internal validation set_. To do this, pass the `validation` parameter of [xgb_train()] via the `parsnip` [set_engine()] function. This is the proportion of the training set that should be reserved for measuring performance (and stop early). 
 
