--- a/man/rmd/linear-reg.Rmd
+++ b/man/rmd/linear-reg.Rmd
@@ -17,7 +17,7 @@ linear_reg() %>%
 ## glmnet
 
 ```{r glmnet-csl}
-linear_reg(penalty = varying()) %>% 
+linear_reg(penalty = 0.1) %>% 
   set_engine("glmnet") %>% 
   set_mode("regression") %>% 
   translate()
