--- a/man/rmd/linear-reg.Rmd
+++ b/man/rmd/linear-reg.Rmd
@@ -33,9 +33,12 @@ the value given in `linear_reg(penalty)`. For example:
 ```{r glmnet-path}
 linear_reg(penalty = .1) %>% 
   set_engine("glmnet", path_values = c(0, 10^seq(-10, 1, length.out = 20))) %>% 
-  set_mode("regression") %>% 
   translate()
 ```
+
+When fitting a pure ridge regression model (i.e., `penalty = 0`), we _strongly
+suggest_ that you pass in a vector for `path_values` that includes zero. See 
+[issue #431](https://github.com/tidymodels/parsnip/issues/431) for a discussion. 
 
 When using `predict()`, the single penalty value used for prediction is the one 
 given to `linear_reg()`. 
@@ -49,7 +52,6 @@ with all of the penalty results.
 ```{r stan-reg}
 linear_reg() %>% 
   set_engine("stan") %>% 
-  set_mode("regression") %>% 
   translate()
 ```
 
