--- a/man/rmd/multinom-reg.Rmd
+++ b/man/rmd/multinom-reg.Rmd
@@ -14,12 +14,13 @@ multinom_reg(penalty = 0.1) %>%
   translate()
 ```
 
-`multinom_reg()` requires a single value for the `penalty` argument (a number
-or `tune()`). Despite this, the full regularization path is always fit
+The glmnet engine requires a single value for the `penalty` argument (a number
+or `tune()`), but the full regularization path is always fit
 regardless of the value given to `penalty`. To pass in a custom sequence of
-values for `lambda`, use the argument `path_values` in `set_engine()`. This
-will assign the value of the glmnet `lambda` parameter without disturbing
-the value given in `multinom_reg(penalty)`. For example: 
+values for glmnet's `lambda`, use the argument `path_values` in `set_engine()`. 
+This will assign the value of the glmnet `lambda` parameter without disturbing
+the value given of `multinom_reg(penalty)`. For example: 
+
 
 ```{r glmnet-path}
 multinom_reg(penalty = .1) %>% 
@@ -31,12 +32,13 @@ When fitting a pure ridge regression model (i.e., `penalty = 0`), we _strongly
 suggest_ that you pass in a vector for `path_values` that includes zero. See 
 [issue #431](https://github.com/tidymodels/parsnip/issues/431) for a discussion. 
 
-When using `predict()`, the single penalty value used for prediction is the one 
-given to `multinom_reg()`. 
+When using `predict()`, the single `penalty` value used for prediction is the 
+one specified in `multinom_reg()`. 
 
-To predict on multiple  penalties, the `multi_predict()` function can be used. 
-It  returns a tibble with a list column called `.pred` that contains  a tibble 
-with all of the penalty results.
+To predict on multiple penalties, use the `multi_predict()` function. 
+This function returns a tibble with a list column called `.pred` containing 
+all of the penalty results.
+
 
 ## nnet
 
