--- a/man/rmd/linear_reg_glmnet.Rmd
+++ b/man/rmd/linear_reg_glmnet.Rmd
@@ -35,7 +35,7 @@ param$item
 
 A value of `mixture = 1` corresponds to a pure lasso model, while `mixture = 0` indicates ridge regression.
 
-The `penalty` parameter has no default. For more details about this, and the `glmnet` model in general, see [glmnet-details].
+The `penalty` parameter has no default and requires a single numeric value. For more details about this, and the `glmnet` model in general, see [glmnet-details].
 
 ## Translation from parsnip to the original package
 
@@ -48,9 +48,12 @@ linear_reg(penalty = double(1), mixture = double(1)) %>%
 
 ## Preprocessing requirements
 
-Factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicators variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data if required.
+```{r child = "template-makes-dummies.Rmd"}
+```
 
-Also, predictors should have the same scale. One way to achieve this is to center and scale each so that each predictors have mean zero and a variance of one. By default, `glmnet()` uses the argument `standardize = TRUE` to center and scale the data. 
+```{r child = "template-same-scale.Rmd"}
+```
+By default, [glmnet::glmnet()] uses the argument `standardize = TRUE` to center and scale the data. 
 
 ## References
 
