--- a/man/rmd/linear_reg_lm.Rmd
+++ b/man/rmd/linear_reg_lm.Rmd
@@ -5,7 +5,7 @@
 
 ## Tuning Parameters
 
-This model has no tuning parameters. 
+This engine has no tuning parameters. 
 
 ## Translation from parsnip to the original package
 
@@ -18,7 +18,8 @@ linear_reg() %>%
 
 ## Preprocessing requirements
 
-The only preprocessing required for this model is that factor/categorical predictors need to be converted to numeric values (e.g., dummy or indicator variables). When using the formula method via [fit.model_spec()], `parsnip` will convert these data if required.
+```{r child = "template-makes-dummies.Rmd"}
+```
 
 ## References
 
