--- a/man/rmd/boost_tree_spark.Rmd
+++ b/man/rmd/boost_tree_spark.Rmd
@@ -64,18 +64,17 @@ boost_tree(
 
 ## Preprocessing requirements
 
-`spark` does not require any special encoding of the predictors. Categorical predictors can be split into groups without creating dummy variables for each category.
+```{r child = "template-split-factors.Rmd"}
+```
 
 ## Other details
 
-For models created using the `spark` engine, there are several differences to consider. 
-
-* Only the formula interface to via `fit()` is available; using `fit_xy()` will generate an error. 
-* The predictions will always be in a spark table format. The names will be the same as documented but without the dots. 
-* There is no equivalent to factor columns in spark tables so class predictions are returned as character columns. 
-* To retain the model object for a new R session (via `save()`), the `model$fit` element of the parsnip object should be serialized via `ml_save(object$fit)` and separately saved to disk. In a new session, the object can be reloaded and reattached to the parsnip object.
+```{r child = "template-spark-notes.Rmd"}
+```
 
 ## References
+
+ - Luraschi, J, K Kuo, and E Ruiz. 2019. _Mastering Spark with R_. O'Reilly Media
 
  - Kuhn, M, and K Johnson. 2013. _Applied Predictive Modeling_. Springer.
 
