--- a/man/rmd/logistic_reg_keras.Rmd
+++ b/man/rmd/logistic_reg_keras.Rmd
@@ -43,7 +43,7 @@ logistic_reg(penalty = double(1)) %>%
   translate()
 ```
 
-[keras_mlp()] is a `parsnip` wrapper around keras code for neural networks. This model fits a linear regression as a network with a single hidden unit. 
+[parsnip::keras_mlp()] is a `parsnip` wrapper around keras code for neural networks. This model fits a linear regression as a network with a single hidden unit. 
 
 ## Preprocessing requirements
 
