--- a/man/rmd/glmnet-details.Rmd
+++ b/man/rmd/glmnet-details.Rmd
@@ -19,8 +19,13 @@ linear_reg(penalty = 1) %>% set_engine("glmnet")
 
 When the `predict()` method is called, it automatically uses the penalty that was given when the model was defined. For example: 
 
+```{r, include = FALSE}
+library(tidymodels)
+library(glmnet)
+```
 ```{r}
 library(tidymodels)
+
 fit <- 
   linear_reg(penalty = 1) %>% 
   set_engine("glmnet") %>% 
